// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/svg Test Suite ChevronBottom Test Suite matches snapshot 1`] = `
<svg
  fill="#fff"
  height="24"
  width="24"
>
  <path
    d="M-1-1h582v402H-1z"
    fill="none"
  />
  <path
    d="M16.59 5.795L12 10.385l-4.59-4.59L6 7.205l6 6 6-6-1.41-1.41zM18 16.205v2H6v-2h12z"
  />
</svg>
`;

exports[`components/svg Test Suite ChevronTop Test Suite matches snapshot 1`] = `
<svg
  fill="#fff"
  height="24"
  width="24"
>
  <path
    d="M-1-1h582v402H-1z"
    fill="none"
  />
  <path
    d="M7.41 18.205l4.59-4.59 4.59 4.59 1.41-1.41-6-6-6 6 1.41 1.41zM6 7.795v-2h12v2H6z"
  />
</svg>
`;

exports[`components/svg Test Suite Education Test Suite matches snapshot 1`] = `
<svg
  fill="#fff"
  height="24"
  width="24"
>
  <path
    d="M0 0h24v24H0z"
    fill="none"
  />
  <path
    d="M5 13.18v4L12 21l7-3.82v-4L12 17l-7-3.82zM12 3L1 9l11 6 9-4.91V17h2V9L12 3z"
  />
</svg>
`;

exports[`components/svg Test Suite Experience Test Suite matches snapshot 1`] = `
<svg
  fill="#fff"
  height="24"
  width="24"
>
  <path
    d="M0 0h24v24H0z"
    fill="none"
  />
  <path
    d="M20 6h-4V4c0-1.11-.89-2-2-2h-4c-1.11 0-2 .89-2 2v2H4c-1.11 0-1.99.89-1.99 2L2 19c0 1.11.89 2 2 2h16c1.11 0 2-.89 2-2V8c0-1.11-.89-2-2-2zm-6 0h-4V4h4v2z"
  />
</svg>
`;

exports[`components/svg Test Suite Heart Test Suite matches snapshot 1`] = `
<svg
  fill="#fff"
  viewBox="0 0 455 455"
>
  <path
    d="M455.111 164.089c0 137.956-163.556 228.978-213.333 253.156-8.533 4.267-19.911 4.267-28.444 0C163.556 393.067 0 304.889 0 164.089 0 92.978 52.622 34.667 116.622 34.667c51.2 0 93.867 35.556 109.511 85.333 15.644-49.778 59.733-85.333 109.511-85.333 66.845 0 119.467 58.311 119.467 129.422z"
    fill="#f44336"
  />
  <path
    d="M455.111 164.089c0 137.956-163.556 228.978-213.333 253.156-8.533 4.267-19.911 4.267-29.867 0-22.756-9.956-65.422-34.133-108.089-68.267h1.422c135.111 0 243.2-109.511 243.2-243.2 0-24.178-4.267-48.356-11.378-71.111 66.845 1.422 118.045 58.311 118.045 129.422z"
    fill="#e53935"
  />
  <path
    d="M109.511 142.756c-22.756 5.689-44.089-2.844-48.356-18.489-2.844-17.067 11.378-34.134 34.134-39.823s44.089 2.844 48.356 18.489c4.266 17.067-11.378 34.134-34.134 39.823z"
    fill="#fff"
    opacity="0.2"
  />
</svg>
`;

exports[`components/svg Test Suite Interests Test Suite matches snapshot 1`] = `
<svg
  fill="#fff"
  height="24"
  width="24"
>
  <path
    d="M0 0h24v24H0z"
    fill="none"
  />
  <path
    d="M15.5 5.5c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zM5 12c-2.8 0-5 2.2-5 5s2.2 5 5 5 5-2.2 5-5-2.2-5-5-5zm0 8.5c-1.9 0-3.5-1.6-3.5-3.5s1.6-3.5 3.5-3.5 3.5 1.6 3.5 3.5-1.6 3.5-3.5 3.5zm5.8-10l2.4-2.4.8.8c1.3 1.3 3 2.1 5.1 2.1V9c-1.5 0-2.7-.6-3.6-1.5l-1.9-1.9c-.5-.4-1-.6-1.6-.6s-1.1.2-1.4.6L7.8 8.4c-.4.4-.6.9-.6 1.4 0 .6.2 1.1.6 1.4L11 14v5h2v-6.2l-2.2-2.3zM19 12c-2.8 0-5 2.2-5 5s2.2 5 5 5 5-2.2 5-5-2.2-5-5-5zm0 8.5c-1.9 0-3.5-1.6-3.5-3.5s1.6-3.5 3.5-3.5 3.5 1.6 3.5 3.5-1.6 3.5-3.5 3.5z"
  />
</svg>
`;

exports[`components/svg Test Suite Menu Test Suite matches snapshot 1`] = `
<svg
  fill="#fff"
  height="24"
  width="24"
>
  <path
    d="M0 0h24v24H0z"
    fill="none"
  />
  <path
    d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
  />
</svg>
`;

exports[`components/svg Test Suite Skills Test Suite matches snapshot 1`] = `
<svg
  fill="#fff"
  height="24"
  width="24"
>
  <path
    d="M0 0h24v24H0V0z"
    fill="none"
  />
  <path
    d="M9.4 16.6L4.8 12l4.6-4.6L8 6l-6 6 6 6 1.4-1.4zm5.2 0l4.6-4.6-4.6-4.6L16 6l6 6-6 6-1.4-1.4z"
  />
</svg>
`;

exports[`components/svg Test Suite Toolbox Test Suite matches snapshot 1`] = `
<svg
  fill="#fff"
  height="24"
  width="24"
>
  <path
    d="M0 0h24v24H0z"
    fill="none"
  />
  <path
    d="M21 3H3c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h5v2h8v-2h5c1.1 0 1.99-.9 1.99-2L23 5c0-1.1-.9-2-2-2zm0 14H3V5h18v12zm-2-9H8v2h11V8zm0 4H8v2h11v-2zM7 8H5v2h2V8zm0 4H5v2h2v-2z"
  />
</svg>
`;
